--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,5 @@ pip-log.txt
 Trabalho/nbproject/private/private.properties
 
 Trabalho/nbproject/private/private.properties
+
+Trabalho/src/java/br/senai/sc/conexao1/Conexao.java
