Revert "calcula tempo"
This reverts commit 6b9a42155511caf492d3229f830e52fef0aaabfa.

# Conflicts:
#	Trabalho/src/java/br/senai/sc/DAO/UsuarioDAO.java
#	Trabalho/src/java/br/senai/sc/entity/Usuario.java

--- a/.gitignore
+++ b/.gitignore
@@ -196,5 +196,7 @@ pip-log.txt
 Trabalho/nbproject/private/private.properties
 
 Trabalho/nbproject/private/private.properties
-
-Trabalho/src/java/br/senai/sc/conexao1/Conexao.java
+Trabalho/src/java/br/senai/sc/entity/Usuario.java
+*.java
+*.xml
+Trabalho/nbproject/private/private.xml
