--- a/Trabalho/nbproject/private/private.properties
+++ b/Trabalho/nbproject/private/private.properties
@@ -5,4 +5,4 @@ j2ee.server.home=/Applications/NetBeans/glassfish-4.1.1/glassfish
 j2ee.server.instance=[/Applications/NetBeans/glassfish-4.1.1/glassfish:/Applications/NetBeans/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=/Applications/NetBeans/glassfish-4.1.1
 selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\Marcos_La\u00eds\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/Users/andersonfrare/Library/Application Support/NetBeans/8.2/build.properties
