--- a/Trabalho/nbproject/private/private.properties
+++ b/Trabalho/nbproject/private/private.properties
@@ -3,7 +3,7 @@
 deploy.ant.properties.file=C:\\Users\\Marcos_La\u00eds\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3957816744.properties
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/Marcos_La\u00eds/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.home=C:/Program Files/wildfly
 j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 selected.browser=Chrome.INTEGRATED
@@ -23,9 +23,9 @@ user.properties.file=/Users/eriksid/Library/Application Support/NetBeans/8.2/bui
 =======
 deploy.ant.properties.file=C:\\Users\\Marcos_La\u00eds\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3957816744.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Marcos_La\u00eds/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
+j2ee.server.domain=C:/Program Files/wildfly/standalone
 j2ee.server.home=/Applications/NetBeans/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.instance=wildfly-deployer:localhost:8080#standalone&C:\\Program Files\\wildfly
 j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 selected.browser=Chrome.INTEGRATED
 user.properties.file=C:\\Users\\Marcos_La\u00eds\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
